libkpass releases:

Version 4 - 20121013
Add support for keyfiles and pull in a bunch of autotools changes.

Version 3 - 20100218
Fixed build issues regarding libssl/libcrypto and "-Wl,--as-needed" LDFLAGS.
Libtool upgrade.  "make" was failing quite spectacularly until I did so.

Version 2 - 20090926
Fixed build issues on PPC.
Added decoding/encoding of dates.

Version 1 - 20090821
Initial release.  Yay!

Pre-release poem (for posterity):
Changes will come,
And changes will go,
But until a real release,
No changes will this show.