@@ -6,7 +6,9 @@ resources, both in design documents and as reference implementations.
 DbFormat.txt is from the KeePass project and is included as a reference (it was
 not specifically licensed and can be removed on request).
 
-Thanks to OpenSSL for doing the cryptographic dirty work for me.
+Thanks to nettle for doing the cryptographic dirty work for me (thanks to
+OpenSSL for doing the dirty work for me previously, but no thanks for the
+licensing issues).
 
 The byte swapping functions are copies of the GNU C Library's htonl and htons
 functions, with the affect reversed to achieve a host-to-little-endian
