@@ -43,9 +43,6 @@ enum kpass_retval {
 	kpass_success,
 	kpass_decrypt_data_fail,
 	kpass_decrypt_db_fail,
-	kpass_hash_pw_fail,
-	kpass_hash_pw_keyfile_fail,
-	kpass_prepare_key_fail,
 	kpass_load_decrypted_data_entry_fail,
 	kpass_load_decrypted_data_group_fail,
 	kpass_init_db_fail,
@@ -56,7 +53,7 @@ enum kpass_retval {
 	kpass_unsupported_flag,
 	kpass_not_implemented,
 };
-#define kpass_retval_len 15
+#define kpass_retval_len 12
 
 extern char *kpass_error_str_en_US[];
 extern char **kpass_error_str;
@@ -193,7 +190,7 @@ kpass_retval	kpass_init_db(kpass_db *db, const uint8_t *data, const int len);
  * to produce a database key with different parameters (seeds, key rounds, init
  * vectors).
  */
-kpass_retval	kpass_hash_pw(const kpass_db *db, const char *pw, uint8_t *pw_hash);
+void	kpass_hash_pw(const kpass_db *db, const char *pw, uint8_t *pw_hash);
 
 /* kpass_hash_pw_keyfile - Generate hash from a string and keyfile.
  * db: backwards compatible argument, can be NULL
@@ -208,7 +205,7 @@ kpass_retval	kpass_hash_pw(const kpass_db *db, const char *pw, uint8_t *pw_hash)
  * to produce a database key with different parameters (seeds, key rounds, init
  * vectors).
  */
-kpass_retval	kpass_hash_pw_keyfile(const kpass_db *db, const char *pw, const uint8_t *data, const int len, uint8_t *pw_hash);
+void	kpass_hash_pw_keyfile(const kpass_db *db, const char *pw, const uint8_t *data, const int len, uint8_t *pw_hash);
 
 /*
  * encrypted->decrypted functions */
