@@ -71,10 +71,9 @@ int main(int argc, char* argv[]) {
 	printf("init: %s\n", kpass_error_str[retval]);
 	if(retval) exit(retval);
 
-	retval = kpass_hash_pw(db, pass = getpass("password:"), pw_hash);
+	kpass_hash_pw(db, pass = getpass("password:"), pw_hash);
 	printf("hash: %s\n", kpass_error_str[retval]);
-	if(retval) exit(retval);
-	
+
 	retval = kpass_decrypt_db(db, pw_hash);
 	printf("decrypt: %s\n", kpass_error_str[retval]);
 	if(retval) exit(retval);
